GH-2772 Compressed target chain in ShaclSail (#2773)
Signed-off-by: Håvard Ottestad <hmottestad@gmail.com>